# prj_manage_app

./: .env  .gitignore  Dockerfile  check.py  home.py  pyproject.toml  requirements.txt  test.py
.streamlit/: secrets.toml
data_processing/: [Pre_Sales] Q3.csv  dim_date.py  test.ipynb
pages/: 1_Project_Manage.py  1_Project_Management.py  2_Sprint_Capacity.py  3_Presales_Importer.py  4_PCV_Assessment.py  5_User_Management.py  6_Workflow_Management.py
sql/: presales.sql  project_info.sql
utils/: auth.py  authen.py  getter.py  header_nav.py  pcv_utils.py
